tests/errors/semantic/blocking/TYPE_ALREADY_DEFINED.py
# pylint: disable=missing-function-docstring, missing-module-docstring

def f():
    return 1

if __name__ == '__main__':
    a = f()
    f = 2
